--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -3,7 +3,7 @@
 <div class="container_principal">
     <header class="heatitulo" >
 
-        <button   class="abrir-navegacion" #abrirnavegacion>&#9776;</button>
+        <button (click)="buttabrirnavegacion()"  class="abrir-navegacion" #abrirnavegacion>&#9776;</button>
 
             <nav class="menu"  id="particles-js" #menu>
                 <ul class="menu-contenido">
