--- a/src/app/components/cuenta-empleado/cuenta-empleado.component.css
+++ b/src/app/components/cuenta-empleado/cuenta-empleado.component.css
@@ -36,10 +36,10 @@
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1;
 
-  }
+}
 
 /*navegacion izquieda*/
-  .menu {
+.menu {
     position: fixed;
     top: 0;
     left: -40%;
@@ -78,7 +78,7 @@
   .menu a {
     color: #2bff00;
     text-decoration: none;
-  }
+}
 
 /*divicion de pagina*/
 .contenedor {
@@ -106,7 +106,7 @@
     flex-basis: 1250px;
     background-color: #333;
     border-radius: 20px;
-  }
+}
 
 
 /*titulo de la empresa*/
@@ -120,10 +120,10 @@
   height: 60px;
   z-index: 1000;
   /*background-color: #000000;*/
-}
+  }
 
 
-.titulo-empresa{
+  .titulo-empresa{
 
   color: #ffffff;
   font: normal 140px Varela Round, sans-serif;
@@ -190,14 +190,11 @@
         -4px 4px 0 #13f1fc,
         
       ;
-    }
   }
+}
 
-
-
-  /*efectos de navegacion*/
-  .efectos-navegación {
-    
+/*efectos de navegacion*/
+.efectos-navegación {
     position: fixed;
     top: 0;
     left: 12%;
@@ -205,47 +202,44 @@
  
     width: 100%;
     
-     font-family: "Inter", sans-serif;
-     /*background-color: #333;*/
-     color: #2bff00;
-     display: flex;
-     align-items: center;
-     /*justify-content: center;*/
-     font-size: 1.3rem;
-     margin-top: 50px;
-     margin-left: 68px;
-     z-index: 1000;
-     /*background-color: #555555;*/
-   }
+    font-family: "Inter", sans-serif;
+    /*background-color: #333;*/
+    color: #2bff00;
+    display: flex;
+    align-items: center;
+    /*justify-content: center;*/
+    font-size: 1.3rem;
+    margin-top: 50px;
+    margin-left: 68px;
+    z-index: 1000;
+    /*background-color: #555555;*/
+  }
  
-   .menu-central a {
-     color: inherit;
-     text-decoration: none;
-     transition: 0.25s ease;
-   }
+  .menu-central a {
+    color: inherit;
+    text-decoration: none;
+    transition: 0.25s ease;
+  }
  
-   .menu-central ul {
-     display: flex;
-     flex-wrap: wrap;
-   }
-   .menu-central ul li {
-     margin-left: 0.75em;
-     margin-right: 0.75em;
-   }
-   .menu-central ul:hover a {
-     color: #ffffff;
-   }
-   .menu-central ul:hover a:hover {
-     color: #ff0000;
-     box-shadow: 0 2px 0 0 currentcolor;
-   }
+  .menu-central ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .menu-central ul li {
+    margin-left: 0.75em;
+    margin-right: 0.75em;
+  }
+  .menu-central ul:hover a {
+    color: #ffffff;
+  }
+  .menu-central ul:hover a:hover {
+    color: #ff0000;
+    box-shadow: 0 2px 0 0 currentcolor;
+}
 
 
 /*------------------------------------------------------------------------------*/
 
-/* 4: VISA, 51 -> 55: MasterCard, 36-38-39: DinersClub, 34-37: American Express, 65: Discover, 5019: dankort*/
-
-/*@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');*/
 
 *{
   margin: 0;
@@ -261,22 +255,61 @@ body{
   font-family: 'Roboto', sans-serif;
 }
 
+/*cargando informacion al servidor*/
+.cargando-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000; 
+  }
 
+  .cargando-alert {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .spinner {
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-top: 4px solid #007bff; /* Color del spinner */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+}
+
+/*estilos de la targeta*/
 .container{
   position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
   margin: auto;
-  top: 0;
+  top: 20px;
   bottom: 0;
-  left: 0;
+  left: -50px;
   right: 0;
   width: 680px;
     
   .col1{
     perspective: 1000;
     transform-style: preserve-3d;
+    
     .card{
       position: relative;
       width: 500px;
@@ -287,10 +320,17 @@ body{
       box-shadow: 0 5px 20px -5px rgba(0,0,0,0.1);
       transition: all 1s;
       transform-style: preserve-3d;
+      
       .front{
         position: absolute;
         background: var(--card-color);
         border-radius: 17px;
+
+        box-shadow: 15px 20px 0 rgba(0, 0, 0, .6);
+        
+        border: 2px solid #000; 
+    
+
         padding: 50px;
         width: 100%;
         height: 100%;
@@ -303,6 +343,7 @@ body{
         -moz-backface-visibility: hidden;
         -ms-backface-visibility: hidden;
         backface-visibility: hidden;
+        
       }
 
       .num_cuenta{
@@ -383,45 +424,88 @@ body{
           font-size: 15px;
           margin-left: 50px;
           
+
+
+          
         }
       }
     }  
 
   }
 }
+
+/*estilos del logo */
+.cont_icon {
+    position: absolute;
+    top: 10%;
+    right: 30px;
+    width: 80px;
+    height: 50px; 
+  }
+
+  /* Estilo para el logo user */
+  .icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    font-size: 50px; 
+    color: #000000;
+}
   
+/*estilos del formulario*/
 .col2{
-  input{
-    display: block;
-    width: 260px;
-    height: 30px;
-    padding-left: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    margin: 7px;
-    font-size: 17px;
-    border-radius: 20px;
-    background: rgba(0,0,0,0.05);
-    border: none;
-    
-    &:focus{
-      outline-width: 0;
-      background: rgba(31,134,252, 0.15);
-      
-    }
+  margin: 30px;
   }
   
-  label{
-    padding-left: 8px;
-    font-size: 15px;
-    color: #444;
-  }
-  buttEnviar{
+  /* Estilo para etiquetas */
+  .label_ {
+    margin-right: 20px;
+    font-size: 1.1rem;
     color: #e1e1e1;
   }
-    
-    
+
+  /* Estilo para inputs */
+  .inputnum_cuenta, .inputnom_banco, .inputtipo_cuenta, .inputsalario {
+    width: 250px; 
+    padding: 8px; 
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    transition: all 0.3s; 
+    margin: 10px;
+    color: #ffffff;
+    background: var(--card-color);
+    background-image: repeating-linear-gradient(45deg, rgba(255, 255, 255, 0) 1px, rgba(255, 255, 255, 0.03) 2px, rgba(255, 255, 255, 0.04) 3px, rgba(255, 255, 255, 0.05) 4px), -webkit-linear-gradient(-245deg, rgba(255, 255, 255, 0) 40%, rgba(255, 255, 255, 0.2) 70%, rgba(194, 197, 155, 0.507) 90%);
+
+  }
+
+  /* Estilo de hover para los inputs */
+  .inputnum_cuenta:hover, .inputnom_banco:hover, .inputtipo_cuenta:hover, .inputsalario:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(85, 255, 6, 0.83), 0 0 30px rgba(85, 255, 6, 0.83);
+    border-color: #6f776c; 
 }
+
+/* Estilo para el botón */
+.buttEnviar {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    border-radius: 5px;
+    padding: 10px 20px; 
+    font-size: 1rem;
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+  }
+
+  /* Estilo de hover para el botón */
+  .buttEnviar:hover {
+    background-color: #48a14c; 
+}
+    
+    
+
   
 
 
