--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -35,7 +35,7 @@
             <nav class="menuclas">
                 <ul class="menu-bolitas">
                     <li><a href="#" class="bolita bolita-1"></a><span class="nombreuno">Horas Extras</span></li>
-                    <li><a href="#" class="bolita bolita-2"></a><span class="nombredos">Asistencia</span></li>
+                    <li><a routerLink="/asistencia" routerLinkActive="active" class="cuadradouno" class="bolita bolita-2"></a><span class="nombredos">Asistencia</span></li>
                     <li><a href="#" class="bolita bolita-3"></a><span class="nombretres">Incapacidad</span></li>
                     <li><a routerLink="/regitroEmpleado" routerLinkActive="active" class="cuadradouno">Regitrar Nuevo Empleado </a></li>
                     <li><a href="#" class="cuadradodos">Borrar Empleado</a></li>
