--- a/src/app/components/registro-empleado/registro-empleado.component.html
+++ b/src/app/components/registro-empleado/registro-empleado.component.html
@@ -32,7 +32,7 @@
                         <ul class="estilonav">
                             <li><a routerLink="/inicio" routerLinkActive="active" >Inicio</a></li>
                             <li><a routerLink="/regitroEmpleado" routerLinkActive="active" >R.Empleado</a></li>
-                            <li><a href="#Movies">R.Asistencia</a></li>
+                            <li><a routerLink="/asistencia" routerLinkActive="active">R.Asistencia</a></li>
                             <li><a href="#">R.Horas Extras</a></li>
                             <li><a href="#">R.Incapacidad</a></li>
                             <li><a href="#">Inventario</a></li>
