Séptimo  commit, rama principal, se termina de la componente asistencia y el componente horas extras se comienza a crear el componente incapacidad

--- a/src/app/components/cuenta-empleado/cuenta-empleado.component.html
+++ b/src/app/components/cuenta-empleado/cuenta-empleado.component.html
@@ -30,14 +30,15 @@
           <div class="efectos-navegación">
               <nav class="menu-central">
                   <ul class="estilonav">
-                      <li><a routerLink="/inicio" routerLinkActive="active">Inicio</a></li>
-                      <li><a routerLink="/regitroEmpleado" routerLinkActive="active">R.Empleado</a></li>
-                      <li><a routerLink="/asistencia" routerLinkActive="active">R.Asistencia</a></li>
-                      <li><a href="#">R.Horas Extras</a></li>
-                      <li><a href="#">R.Incapacidad</a></li>
-                      <li><a href="#">Inventario</a></li>
-                      <li><a href="#">Borrar Empleado</a></li>
-
+                     
+                    <li><a class="a_menu" routerLink="/inicio" routerLinkActive="active">Inicio</a></li>
+                    <li><a class="a_menu_set" routerLink="/regitroEmpleado" routerLinkActive="active">R.Empleado</a></li>
+                    <li><a class="a_menu" routerLink="/asistencia" routerLinkActive="active">R.Asistencia</a></li>
+                    <li><a class="a_menu" routerLink="/horasExtras" routerLinkActive="active" >R.Horas Extras</a></li>
+                    <li><a class="a_menu" routerLink="/incapacidad" routerLinkActive="active">R.Incapacidad</a></li>
+                    <li><a class="a_menu" href="#">Inventario</a></li>
+                    <li><a class="a_menu" href="#">Borrar Empleado</a></li>
+                 
                   </ul> 
               </nav>
           </div>
