--- a/src/app/components/horas-extras/horas-extras.component.css
+++ b/src/app/components/horas-extras/horas-extras.component.css
@@ -5,15 +5,12 @@
     left: 0.1%;
     width: 100%;
     height: 100%;
-   /* padding: 40px;*/
-    /*transform: translate(-50%, -50%); */
-}
+  }
 
 .abrir-navegacion {
     position: fixed; 
     top: 3.5%; 
     right: 80px; 
-    
     transform: translateY(-50%); 
     background-color: transparent;
     border: none;
@@ -32,10 +29,11 @@
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1;
-}
+
+  }
 
 /*navegacion izquieda*/
-.menu {
+  .menu {
     position: fixed;
     top: 0;
     left: -40%;
@@ -51,6 +49,7 @@
   .menu ul:hover a {
     color: #ffffff;
   }
+
   .menu ul:hover a:hover {
     color: #ff0000;
     box-shadow: 0 2px 0 0 currentcolor;
@@ -74,7 +73,7 @@
   .menu a {
     color: #2bff00;
     text-decoration: none;
-}
+  }
 
 /*divicion de pagina*/
 .contenedor {
@@ -100,7 +99,8 @@
     flex-basis: 1250px;
     background-color: #333;
     border-radius: 20px;
-}
+  }
+
 
 /*titulo de la empresa*/
 .estilo {
@@ -127,14 +127,12 @@
   font-size: 40px;
   margin-top: 2px;
   }
-  
+
   @keyframes animar {
     0% {
       text-shadow:
-        
         1px -1px 0 #da0641,
         -4px 4px 0 #13f1fc,
-      
       ;
     }
     30% {
@@ -151,7 +149,6 @@
     }
     50% {
       text-shadow:
-        
         -1px 1px 0 #da0641,
         4px -4px 0 #13f1fc,
         
@@ -171,45 +168,43 @@
     }
     100% {
       text-shadow:
-        
         1px -1px 0 #da0641,
         -4px 4px 0 #13f1fc,
-        
       ;
+    }
   }
-}
 
-/*efectos de navegacion*/
-.efectos-navegación {
-    position: fixed;
-    top: 0;
-    left: 12%;
-    height: 40px;
-    width: 100%;
-    font-family: "Inter", sans-serif;
-    /*background-color: #333;*/
-    color: #2bff00;
-    display: flex;
-    align-items: center;
-    /*justify-content: center;*/
-    font-size: 1.3rem;
-    margin-top: 50px;
-    margin-left: 68px;
-    z-index: 1000;
-    /*background-color: #555555;*/
-   }
+
+
+  /*efectos de navegacion*/
+  .efectos-navegación {
+        position: fixed;
+        top: 0;
+        left: 12%;
+        height: 40px;
+        width: 100%;
+        font-family: "Inter", sans-serif;
+        color: #2bff00;
+        display: flex;
+        align-items: center;
+        font-size: 1.3rem;
+        margin-top: 50px;
+        margin-left: 68px;
+        z-index: 1000;
+    }
  
-   .a_menu {
-    color: inherit;
-    text-decoration: none;
-    transition: 0.25s ease;
-  }
-  .a_menu_set{
-   color: #ff0000;
+    .a_menu {
+        color: inherit;
+        text-decoration: none;
+        transition: 0.25s ease;
+    }
+
+   .a_menu_set{
+    color: #ff0000;
     text-decoration: none;
     transition: 0.25s ease;
     box-shadow: 0 2px 0 0 currentcolor;
-  }
+   }
  
    .menu-central ul {
      display: flex;
@@ -225,8 +220,9 @@
    .menu-central ul:hover a:hover {
      color: #ff0000;
      box-shadow: 0 2px 0 0 currentcolor;
-}
+   }
 
+/*--------------------------------------*/
 .contenerdo_formulario {
     width: 100%;
     overflow: hidden; 
@@ -279,7 +275,6 @@
       width: 59%; 
     }
 
-
     .cont_registro {
       position: relative;
       top: 0;
@@ -291,7 +286,7 @@
       z-index: 2; 
       border: 3px solid #000000;
       border-radius: 10px;
-      }
+    }
 
     /*texto Registro asistencia*/
     .text_registro {
@@ -336,7 +331,6 @@
       margin-top: 10px;
     }
 
-
     .cont_select {
       position: relative;
       top: 57px;
@@ -368,6 +362,7 @@
       font-size: 18px;
       transition: color 0.5s;
       color: #000000;
+      margin-left: 5px;
     }
 
     .input_ {
@@ -377,6 +372,7 @@
       border: 1px solid #000000;
       border-radius: 5px;
       font-size: 1rem;
+      margin: 3px;
     }
     .input_:hover {
       border-radius: 10px;
@@ -481,17 +477,62 @@
   align-items: center; 
   border: 2px solid #333; 
   border-radius: 5px; 
-  padding: 4px; 
-  width: 350px;
+  height: 70px; 
+  width: 500px;
   margin: 15px;
   margin-left: 10%;
-  margin-top: 20px;
 }
+
+.form_fechaTime{
+    display: flex; 
+    align-items: center; 
+    border: 2px solid #333; 
+    border-radius: 5px; 
+    height: 70px; 
+    width: 500px;
+    margin: 15px;
+    margin-left: 10%;
+  }
+
+.label_hora {
+    font-weight: bold;
+    margin-right: 20px; 
+    font-size: 1.1rem;
+    font-size: 18px;
+    transition: color 0.5s;
+    color: #000000;
+    margin-left: 50px;
+    margin-top: 10px;
+    &:after{
+        content: 'HH.MM';
+        position: absolute;
+        display: block;
+        font-size: 15px;
+        margin-left: 150px;
+        margin-top: 6px;
+        color: #000000;
+      }
+  }
+
+.input_hora {
+    width: 80px;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+
+  .input_hora:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+  }
 
 .h2_time {
   font-size: 20px; 
-  margin-left: 10%; 
-  margin-right: 30px; 
+  margin-left: 5%; 
+  margin-right: 15px; 
   text-transform: capitalize; 
   font-weight: 600; 
   text-align: left; 
@@ -500,16 +541,6 @@
   font-weight: bold; 
   margin-right: 10px; 
   text-shadow: 3px 3px 4px rgba(29, 26, 26, 0.699); 
-  
 }
-      
-
-
-
- 
-    
-  
-
- 
 
 
