--- a/src/app/components/registro-empleado/registro-empleado.component.css
+++ b/src/app/components/registro-empleado/registro-empleado.component.css
@@ -186,10 +186,16 @@
      border-radius: 20px
   }
  
-  .menu-central a {
+  .a_menu {
     color: inherit;
     text-decoration: none;
     transition: 0.25s ease;
+  }
+  .a_menu_set{
+   color: #ff0000;
+    text-decoration: none;
+    transition: 0.25s ease;
+    box-shadow: 0 2px 0 0 currentcolor;
   }
  
   .menu-central ul {
