--- a/src/app/components/horas-extras/horas-extras.component.css
+++ b/src/app/components/horas-extras/horas-extras.component.css
@@ -16,10 +16,11 @@
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-    background-color: #9dc0c2;
     border: 2px solid #000000;
     border-radius: 15px;
     z-index: 1000; 
+    background-color: #333;
+    border-radius: 20px
   }
 
   .abrir-navegacion:hover {
@@ -182,7 +183,7 @@
         top: 0;
         left: 12%;
         height: 40px;
-        width: 100%;
+        width: 77%;
         font-family: "Inter", sans-serif;
         color: #2bff00;
         display: flex;
@@ -191,6 +192,8 @@
         margin-top: 50px;
         margin-left: 68px;
         z-index: 1000;
+        background-color: #333;
+        border-radius: 20px
     }
  
     .a_menu {
