--- a/src/app/components/incapacidad/incapacidad.component.css
+++ b/src/app/components/incapacidad/incapacidad.component.css
@@ -13,29 +13,25 @@
     position: fixed; 
     top: 3.5%; 
     right: 80px; 
-    
     transform: translateY(-50%); 
     background-color: transparent;
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-    background-color: #9dc0c2;
     border: 2px solid #000000;
     border-radius: 15px;
     z-index: 1000; 
+    background-color: #333;
+    border-radius: 20px
   }
 
   .abrir-navegacion:hover {
     background-color: #ffffff;
-
-
-    
     border-radius: 15px;
     box-shadow: 0 0 5px #01ff62a1,
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1,
                 0 0 25px #01ff62a1;
-
   }
 
 /*navegacion izquieda*/
@@ -85,12 +81,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    /*background-color: #da0641;*/
   }
   
   .columna-izquierda{
     flex-basis: 5%;
-    
     flex-grow: 1; 
    background-color: #000000;
    
@@ -99,7 +93,6 @@
     flex-basis: 5%;
     flex-grow: 1; 
     background-color: #000000;
-    
   }
   
   .columna-central {
@@ -115,40 +108,30 @@
   top: 0;
   right: 35%;
   transform: translateX(-50%, -50%); 
-  
   width: 400px;
   height: 60px;
   z-index: 1000;
-  /*background-color: #000000;*/
 }
 
 
 .titulo-empresa{
-
   color: #ffffff;
   font: normal 140px Varela Round, sans-serif;
-
   left: 0;
   letter-spacing: 10px;
   text-align: center;
   text-transform: uppercase;
   width: 100%;
   animation: animar linear 5000ms infinite;
- 
   font-size: 40px;
   margin-top: 2px;
-  
-  
   }
 
-  
   @keyframes animar {
     0% {
       text-shadow:
-        
         1px -1px 0 #da0641,
         -4px 4px 0 #13f1fc,
-      
       ;
     }
     30% {
@@ -165,10 +148,8 @@
     }
     50% {
       text-shadow:
-        
         -1px 1px 0 #da0641,
         4px -4px 0 #13f1fc,
-        
       ;
     }
     80% {
@@ -185,44 +166,43 @@
     }
     100% {
       text-shadow:
-        
         1px -1px 0 #da0641,
         -4px 4px 0 #13f1fc,
-        
       ;
     }
   }
 
-
-
   /*efectos de navegacion*/
   .efectos-navegación {
-    
-    position: fixed;
-    top: 0;
-    left: 12%;
-    height: 40px;
- 
-    width: 100%;
-    
-     font-family: "Inter", sans-serif;
-     /*background-color: #333;*/
-     color: #2bff00;
-     display: flex;
-     align-items: center;
-     /*justify-content: center;*/
-     font-size: 1.3rem;
-     margin-top: 50px;
-     margin-left: 68px;
-     z-index: 1000;
-     /*background-color: #555555;*/
-   }
- 
+      position: fixed;
+      top: 0;
+      left: 12%;
+      height: 40px;
+      width: 77%;
+      font-family: "Inter", sans-serif;
+      color: #2bff00;
+      display: flex;
+      align-items: center;
+      font-size: 1.3rem;
+      margin-top: 50px;
+      margin-left: 68px;
+      z-index: 1000;
+      background-color: #333;
+      border-radius: 20px
+    }
+
    .a_menu {
-     color: inherit;
-     text-decoration: none;
-     transition: 0.25s ease;
-   }
+    color: inherit;
+    text-decoration: none;
+    transition: 0.25s ease;
+  }
+
+  .a_menu_set{
+    color: #ff0000;
+    text-decoration: none;
+    transition: 0.25s ease;
+    box-shadow: 0 2px 0 0 currentcolor;
+  }
  
    .menu-central ul {
      display: flex;
@@ -239,8 +219,441 @@
      color: #ff0000;
      box-shadow: 0 2px 0 0 currentcolor;
    }
-	.a_menu_set{
-    color: #7e7b7b;
-     text-decoration: none;
-     transition: 0.25s ease;
-   }
+
+/*------------------------------------------------------------*/
+
+/*estilos formulario*/
+.contenerdo_formulario {
+  width: 100%;
+  overflow: hidden; 
+  display: flex;
+  }
+  
+/*cargando informacion al servidor*/
+.cargando-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000; 
+  }
+
+  .cargando-alert {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .spinner {
+    border: 4px solid rgba(0, 0, 0, 0.3);
+    border-top: 4px solid #007bff; /* Color del spinner */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 2s linear infinite;
+  }
+
+  @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+}
+
+/*formulario izquierda*/
+.izquierda_form {
+    float: left;
+    margin-top: 50px;
+    margin-left: 10px;
+    width: 59%; 
+  }
+
+  .cont_registro {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 40px;
+    color: #000000;
+    background-color: #d6d6d6;
+    z-index: 2; 
+    border: 3px solid #000000;
+    border-radius: 10px;
+  }
+
+  /*texto Registro Empleado*/
+  .text_registro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    height: 6vh; 
+    font-size: 1.5rem;
+    border: #000000;
+    border-radius: 10px;
+    position: relative; 
+    margin-left: 10px;
+  }
+
+  .cont_form {
+    position: relative;
+    top: 0; 
+    left: 10px;
+    width: 95%;
+    transform: translateY(-2%); 
+    background-color: #7e7b7b;
+    z-index: 1; 
+    border: 3px solid #000000;
+    border-radius: 20px;
+  }
+
+  .form {
+    position: relative;
+    top: 5px;
+    right: 5px;
+    left: 5px;
+    width: 95%;
+    height: 90%;
+    margin: 10px;
+  }
+
+
+  /* Estilo para campos de entrada requeridos */
+  .requiered {
+    color: red;
+    margin: 3px;
+  }
+
+  .cont_select {
+    position: relative;
+    top: 57px;
+    width: 210px;
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+  }
+
+  .cont_posicion{
+    position: relative;
+    top: 0;
+    left: 45%;
+    width: 350px;
+  }
+
+  .cont_input {
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+  }
+
+  .label_ {
+    font-weight: bold;
+    margin-right: 20px; 
+    font-size: 1.1rem;
+    font-size: 18px;
+    transition: color 0.5s;
+    color: #000000;
+  }
+
+  .input_ {
+    margin-top: 8px;
+    width: 300px;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+  .input_:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+  }
+
+  .select_ { 
+    font-size: 1rem;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+  }
+
+  .select_:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+}
+
+.h2 {
+  font-size: 20px;
+  margin-left: 10%; 
+  text-transform: capitalize;
+  font-weight: 600; 
+  text-align: left; 
+  color: #f0f0f0e5; 
+  padding: 5px 0; 
+  font-weight: bold; 
+  margin-right: 10px; 
+  text-shadow: 3px 3px 4px rgba(47, 218, 62, 0.699);
+}
+
+.p {
+  margin: 0; 
+  white-space: nowrap; 
+  font-weight: bold;
+  margin-right: 20px; 
+  font-size: 1.1rem;
+  font-size: 20px;
+  text-transform: capitalize;
+  transition: color 0.5s;
+  color: #000000;
+}
+  
+.cont_datos {
+  display: flex; 
+  align-items: center; 
+  border: 2px solid #333; 
+  border-radius: 5px; 
+  padding: 4px; 
+  width: 350px;
+  margin: 8px;
+  margin-left: 20%;
+}
+
+.cont_fechaTime{
+  display: flex; 
+  align-items: center; 
+  border: 2px solid #333; 
+  border-radius: 5px; 
+  padding: 4px; 
+  width: 500px;
+  margin: 15px;
+  margin-left: 10%;
+  margin-top: 10px;
+}
+
+.h2_time {
+  font-size: 20px; 
+  margin-left: 10%; 
+  margin-right: 30px; 
+  text-transform: capitalize; 
+  font-weight: 600; 
+  text-align: left; 
+  color: rgb(255, 255, 255); 
+  padding: 5px 0; 
+  font-weight: bold; 
+  margin-right: 10px; 
+  text-shadow: 3px 3px 4px rgba(117, 76, 76, 0.699); 
+}
+
+.cont_input_label {
+  display: flex;
+  flex-direction: row; 
+  align-items: center; 
+  margin-left: 20%;
+  margin-top: 10px;
+  }
+  .input_fecha{
+    width: 135px;
+    font-size: 1rem;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    margin-right: 10px;
+  }
+
+  .input_fecha:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+}
+
+.label_causa{
+  font-weight: bold;
+  margin-right: 20px; 
+  font-size: 1.1rem;
+  margin-left: 30px;
+  margin-left: 18%;
+  margin-top: 10px;
+}
+
+.input_causa{
+  align-items: center;
+  width: 325px;
+  padding: 5px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  font-size: 1rem;
+}
+.input_causa:hover {
+  border-radius: 10px;
+  box-shadow: 0 0 5px #55ff06d3,
+              0 0 25px #55ff06d3,
+              0 0 25px #55ff06d3,
+              0 0 25px #55ff06d3
+}
+
+
+.label_descript{
+  font-weight: bold;
+  margin-right: 20px; 
+  font-size: 1.1rem;
+  margin-left: 40%;
+  margin-top: 10px;
+}
+
+.input_descript{
+  margin-left: 19%;
+  width: 400px;
+  max-width: 400px; 
+  min-height: 1.5rem; 
+  padding: 5px;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  font-size: 1rem;
+  resize: none;
+  margin-bottom: 20px;
+}
+.input_descript:hover {
+  border-radius: 10px;
+  box-shadow: 0 0 5px #55ff06d3,
+              0 0 25px #55ff06d3,
+              0 0 25px #55ff06d3,
+              0 0 25px #55ff06d3
+}
+
+/*formulario derecha*/
+.derecha_form {
+    float: right;
+    margin-top: 85px;
+    margin-right: 10px;
+    width: 38%; 
+    height: 70%;
+    background-color: #7e7b7b;
+    border-radius: 20px;
+    border: 3px solid #000000;
+  }
+    /* contenedor del  logo fire */
+    .conteinerimgs {
+      width: 280px; 
+      height: 280px; 
+      position: relative;
+      top: 10px;
+      margin-left: 20%;
+      margin-right: 20%;
+      overflow: hidden; 
+      z-index: 2;
+  }
+
+  /* Estilo para el logo user */
+  .icon {
+      position: absolute;
+      top: 10%;
+      left: 10%;
+      transform: translate(-50%, -50%); 
+      font-size: 200px; 
+      color: #ffffff;
+      border: solid 3px #000000;
+      border-radius: 30px;
+  }
+
+  .cont_input_label_file{
+    display: flex;
+    flex-direction: row; 
+    align-items: center; 
+    margin-left: 5%;
+    margin-top: 10px;
+  }
+
+  .input_file {
+    width: 360px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-size: 1rem;
+    margin-left: 20px;
+    margin-top: 10px;
+  }
+  .input_file:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+  }
+
+  .label_file {
+    font-weight: bold;
+    font-size: 1.1rem;
+    margin-left: 130px;
+  }
+
+  .input_dia{
+    align-items: center;
+    width: 50px;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+  .input_dia:hover {
+    border-radius: 10px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+  }
+
+/*style butt*/
+.botones-container {
+    display: flex; 
+    justify-content: space-between; 
+    width: 50%; 
+    margin: 0 auto; 
+  }
+
+  .buttlimpiar, .buttenviar {
+    flex: 1;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+   margin-left: 30px;
+   margin-right: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .buttenviar:hover  {
+    background-color: #16cf82;
+    border-radius: 15px;
+    box-shadow: 0 0 5px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3,
+                0 0 25px #55ff06d3
+  }
+
+  .buttlimpiar:hover{
+    background-color: #ee1645;
+    border-radius: 15px;
+    box-shadow: 0 0 5px #ff0037be,
+                0 0 25px  #ff0037be,
+                0 0 25px  #ff0037be,
+                0 0 25px #ff0037be
+}
+
+
