--- a/src/app/components/incapacidad/incapacidad.component.html
+++ b/src/app/components/incapacidad/incapacidad.component.html
@@ -40,24 +40,134 @@
                     </ul> 
                 </nav>
             </div>
-<br><br><br><br><br><br><br><br><br><br>
-<br><br><br><br><br><br><br><br><br><br>
+            <div class="contenerdo_formulario">
 
-<br><br><br><br><br><br><br><br><br><br>
+                <!--animacion de gargando imagen-->
+                <div class="cargando-overlay" *ngIf="loading">
+                    <div class="cargando-alert">
+                        <div class="spinner"></div>
+                        <div>Cargando...</div>
+                    </div>
+                </div>
 
+                <div class="izquierda_form">
 
+                    <div class="cont_registro">
+                        <h1 class="text_registro">Registro incapacidad</h1>
+                    </div>
 
-
-
-        </div>
-       
+                    <div class="cont_form">
         
+                        <form class="form">
+                            <div class="cont_select" >
+                                <p class="requiered">*</p>
+                                <select [(ngModel)]="EmpleadoBusar.tipo_documento" name="tipo_documento" class="select_" id="tipo_documento" required>
+                                    <option [ngValue]="''" disabled hidden>Tipo de documento</option>
+                                    <option value="cc">Cédula de Ciudadanía</option>
+                                    <option value="ce">Cédula de Extranjería</option>
+                                </select>
+                            </div>
+
+                            <div class="cont_posicion">
+                                <label class="label_" for="">Digite el numero de cedula del empleado </label>
+                                <div class="cont_input">
+                                    <input  [(ngModel)]="EmpleadoBusar.id_cedula" name="id_cedula" class="input_" type="number" id="num_documento"  placeholder="Ingrese el numero de documento" inputmode="numeric" required>
+                                    <p class="requiered">*</p>
+                                </div>
+                            </div>
+
+                            <div class="botones-container">
+                                <!--button class="buttlimpiar" id="botonlimbiar">limpiar</button-->
+                                <button (click)="buscarEmp()" class="buttenviar" id="botonEnviar">Buscar</button>
+                            </div>
+                        </form>
+
+                        <div class="datosocultos" style="display: none;">
+
+                            <h2 class="h2">Datos Del Empleado</h2>
+
+                            <div class="cont_datos">
+                                <h2 class="h2">Nombre: </h2><p class="p">{{ nombre }}</p>
+                            </div>
+
+                            <div class="cont_datos">
+                                <h2 class="h2">Apellidos: </h2><p class="p">{{ apellidos }}</p>
+                            </div>
+
+                            <h2 class="h2">Datos A Registrar</h2>
+
+                            <div class="cont_fechaTime">
+                                <h2 class="h2_time">fecha del registro de incapacidad: </h2><p class="p">{{ fechaActual }}</p>
+                            </div>
+
+                            <form action="" class="formDos">
+
+                                <div class="cont_input_label" >
+                                    <label class="label_" for="fecha_incapacidad">Fecha de incapacidad</label>
+                                    <input  [(ngModel)]="datos_incapacidad.fecha_incapacidad" name="fecha_incapacidad" class="input_fecha" type="date" id="fecha" min="1923-01-01" max="2030-12-31" required>
+                                    <p class="requiered">*</p>
+                                </div>
+
+                                <br>
+
+                                <label class="label_causa" for="causa">Causas</label>
+                                <input  [(ngModel)]="datos_incapacidad.causa" name="causa" class="input_causa" type="text" placeholder="Escribe aquí la causa de incapacidad">
+
+                                <br><br>
+                                <label class="label_descript" for="descripcion">descripcion</label>
+                                <br>
+
+                                <textarea  [(ngModel)]="datos_incapacidad.descripcion" name="descripcion" class="input_descript" type="text" placeholder="Escribe aquí la descripción de la incapacidad"  rows="4" cols="50"></textarea>
+                            </form>
+                        </div>
+                    </div>
+                </div>    
+
+                <div class="derecha_form">
+
+                    <div class="datosocultosDos" style="display: none;">
+
+                        <div class="conteinerimgs">
+                            <i class="fa-solid fa-file-pdf fa-beat-fade icon"></i>
+                            
+                        </div><br>
+                        
+                        <form class="formTres" action="">
+
+                            <label class="label_file" for="cargarImagen">Selecciona el archivo pdf:</label>
+                            <div class="cont_input_label_file"> 
+                                <i class="fa-solid fa-folder"></i>
+                                <input (change)="onFileSelected($event)" name="archivo_incapacidad" class="input_file" type="file" accept="application/pdf"  required>
+                                <p class="requiered">*</p>
+                            </div>
+
+                            <br>
+
+                            <div class="cont_input_label_file">
+                                <p class="requiered">*</p>
+                                <label class="label_" for="numero">Dias de incapacidad:</label>
+                                <input [(ngModel)]="datos_incapacidad.cantidad_dias_incapacidad" name="cantidad_dias_incapacidad" class="input_dia" type="number" id="numero"  placeholder="dias " required>
+                                
+                            </div>
+
+                            <br>
+                            
+                        </form>
+                    </div>
+  
+                </div>
+            </div>
+
+            <div class="datosocultosTres" style="display: none;">
+                <div class="botones-container">
+                    <button  class="buttlimpiar" id="botonlimbiar">limpiar</button>
+                    <button (click)="enviar_incapacidad()" class="buttenviar" id="botonEnviar">Enviar Datos</button>
+                </div>
+            </div>
+        </div>
+    
         <div div class="columna-derecha" #columnaderecha></div>
-
-
     </div>
-
-
     </div>
 </body>
 <router-outlet></router-outlet>
