--- a/src/app/components/registro-empleado/registro-empleado.component.css
+++ b/src/app/components/registro-empleado/registro-empleado.component.css
@@ -18,8 +18,9 @@
   cursor: pointer;
   background-color: #9dc0c2;
   border: 2px solid #000000;
-  border-radius: 15px;
   z-index: 1000; 
+  background-color: #333;
+  border-radius: 20px
   }
 
   .abrir-navegacion:hover {
