--- a/src/app/components/asistencia/asistencia.component.html
+++ b/src/app/components/asistencia/asistencia.component.html
@@ -35,7 +35,7 @@
                         <li><a class="a_menu" routerLink="/horasExtras" routerLinkActive="active" >R.Horas Extras</a></li>
                         <li><a class="a_menu" routerLink="/incapacidad" routerLinkActive="active">R.Incapacidad</a></li>
                         <li><a class="a_menu" href="#">Inventario</a></li>
-                        <li><a class="a_menu" href="#">Borrar Empleado</a></li>
+                        <li><a class="a_menu" routerLink="/deleteEmpleado" routerLinkActive="active">Borrar Empleado</a></li>
                     </ul> 
                 </nav>
             </div>
