--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -38,7 +38,7 @@
                     <li><a routerLink="/asistencia" routerLinkActive="active" class="cuadradouno" class="bolita bolita-2"></a><span class="nombredos">Asistencia</span></li>
                     <li><a routerLink="/incapacidad" routerLinkActive="active" class="bolita bolita-3"></a><span class="nombretres">Incapacidad</span></li>
                     <li><a routerLink="/regitroEmpleado" routerLinkActive="active" class="cuadradouno">Regitrar Nuevo Empleado </a></li>
-                    <li><a href="#" class="cuadradodos">Borrar Empleado</a></li>
+                    <li><a routerLink="/deleteEmpleado" routerLinkActive="active" class="cuadradodos">Borrar Empleado</a></li>
                     <li><a href="#" class="cuadradotres">Inventario</a></li>
                 </ul>
             </nav>
