--- a/src/app/components/incapacidad/incapacidad.component.css
+++ b/src/app/components/incapacidad/incapacidad.component.css
@@ -290,7 +290,7 @@
 
   /*texto Registro Empleado*/
   .text_registro {
-    display: flex;
+    margin-top: 10px;
     flex-direction: column;
     justify-content: center; 
     height: 6vh; 
