--- a/src/app/components/incapacidad/incapacidad.component.html
+++ b/src/app/components/incapacidad/incapacidad.component.html
@@ -34,8 +34,8 @@
                         <li><a class="a_menu" routerLink="/asistencia" routerLinkActive="active">R.Asistencia</a></li>
                         <li><a class="a_menu" routerLink="/horasExtras" routerLinkActive="active" >R.Horas Extras</a></li>
                         <li><a class="a_menu_set" routerLink="/incapacidad" routerLinkActive="active">R.Incapacidad</a></li>
-                        <li><a class="a_menu" href="#">Inventario</a></li>
-                        <li><a class="a_menu" href="#">Borrar Empleado</a></li>
+                        <li><a class="a_menu" >Inventario</a></li>
+                        <li><a class="a_menu" routerLink="/deleteEmpleado" routerLinkActive="active">Borrar Empleado</a></li>
 
                     </ul> 
                 </nav>
