--- a/src/app/components/registro-empleado/registro-empleado.component.css
+++ b/src/app/components/registro-empleado/registro-empleado.component.css
@@ -283,7 +283,7 @@
 
   /*texto Registro Empleado*/
   .text_registro {
-    display: flex;
+    margin-top: 10px;
     flex-direction: column;
     justify-content: center; 
     height: 6vh; 
