Décimo  commit, rama principal, se continúa en la creación del componente eliminar empleado, ya muestra breve historial del empleado, como el perfil del empleado, se realizan las llamadas HTTP para eliminar el empleado y dejar el registro de la eliminación.

--- a/src/app/components/asistencia/asistencia.component.html
+++ b/src/app/components/asistencia/asistencia.component.html
@@ -62,7 +62,7 @@
                             <div class="cont_select" >
                                 <p class="requiered">*</p>
                                 <select [(ngModel)]="EmpleadoBusar.tipo_documento" name="tipo_documento" class="select_" id="tipo_documento" required>
-                                    <option [ngValue]="''" disabled hidden>Tipo de documento</option>
+                                    <option value="">Tipo de documento</option>
                                     <option value="cc">Cédula de Ciudadanía</option>
                                     <option value="ce">Cédula de Extranjería</option>
                                 </select>
