--- a/src/app/components/registro-empleado/registro-empleado.component.html
+++ b/src/app/components/registro-empleado/registro-empleado.component.html
@@ -70,8 +70,9 @@
                                 </div>
 
                                 <div class="cont_input_label" >
-                                    <p class="requiered">*</p><select  [(ngModel)]="empleado_f.tipo_documento" name="tipo_documento" class="select_" id="tipo_documento" required>
-                                        <option [ngValue]="''" disabled hidden>Tipo de documento</option>
+                                    <p class="requiered">*</p>
+                                    <select  [(ngModel)]="empleado_f.tipo_documento" name="tipo_documento" class="select_" id="tipo_documento" required>
+                                        <option value="">Tipo de documento</option>
                                         <option value="cc">Cédula de Ciudadanía</option>
                                         <option value="ce">Cédula de Extranjería</option>
                                     </select>
@@ -84,40 +85,40 @@
                                 </div>
                                 <div class="cont_input_label" >
                                     <p class="requiered">*</p><select  [(ngModel)]="empleado_f.pais" name="pais" class="select_" id="pais"  required>
-                                        <option [ngValue]="''" disabled hidden>Elije un país</option>
+                                        <option value="">Elije un país</option>
                                         <option value="+54">Argentina (+54)</option>
-                                            <option value="+61">Australia (+61)</option>
-                                            <option value="+55">Brasil (+55)</option>
-                                            <option value="+57">Colombia (+57)</option>
-                                            <option value="+56">Chile (+56)</option>
-                                            <option value="+86">China (+86)</option>
-                                            <option value="+506">Costa Rica (+506)</option>
-                                            <option value="+53">Cuba (+53)</option>
-                                            <option value="+1">Canadá (+1)</option>
-                                            <option value="+57">Colombia (+57)</option>
-                                            <option value="+82">Corea del Sur (+82)</option>
-                                            <option value="+1">Estados Unidos (+1)</option>
-                                            <option value="+503">El Salvador (+503)</option>
-                                            <option value="+593">Ecuador (+593)</option>
-                                            <option value="+34">España (+34)</option>
-                                            <option value="+49">Alemania (+49)</option>
-                                            <option value="+33">Francia (+33)</option>
-                                            <option value="+502">Guatemala (+502)</option>
-                                            <option value="+504">Honduras (+504)</option>
-                                            <option value="+91">India (+91)</option>
-                                            <option value="+81">Japón (+81)</option>
-                                            <option value="+52">México (+52)</option>
-                                            <option value="+591">Bolivia (+591)</option>
-                                            <option value="+595">Paraguay (+595)</option>
-                                            <option value="+507">Panamá (+507)</option>
-                                            <option value="+51">Perú (+51)</option>
-                                            <option value="+1">Puerto Rico (+1)</option>
-                                            <option value="+7">Rusia (+7)</option>
-                                            <option value="+46">Suecia (+46)</option>
-                                            <option value="+91">India (+91)</option>
-                                            <option value="+55">Brasil (+55)</option>
-                                            <option value="+52">México (+52)</option>
-                                            <option value="+58">Venezuela (+58)</option>
+                                        <option value="+61">Australia (+61)</option>
+                                        <option value="+55">Brasil (+55)</option>
+                                        <option value="+57">Colombia (+57)</option>
+                                        <option value="+56">Chile (+56)</option>
+                                        <option value="+86">China (+86)</option>
+                                        <option value="+506">Costa Rica (+506)</option>
+                                        <option value="+53">Cuba (+53)</option>
+                                        <option value="+1">Canadá (+1)</option>
+                                        <option value="+57">Colombia (+57)</option>
+                                        <option value="+82">Corea del Sur (+82)</option>
+                                        <option value="+1">Estados Unidos (+1)</option>
+                                        <option value="+503">El Salvador (+503)</option>
+                                        <option value="+593">Ecuador (+593)</option>
+                                        <option value="+34">España (+34)</option>
+                                        <option value="+49">Alemania (+49)</option>
+                                        <option value="+33">Francia (+33)</option>
+                                        <option value="+502">Guatemala (+502)</option>
+                                        <option value="+504">Honduras (+504)</option>
+                                        <option value="+91">India (+91)</option>
+                                        <option value="+81">Japón (+81)</option>
+                                        <option value="+52">México (+52)</option>
+                                        <option value="+591">Bolivia (+591)</option>
+                                        <option value="+595">Paraguay (+595)</option>
+                                        <option value="+507">Panamá (+507)</option>
+                                        <option value="+51">Perú (+51)</option>
+                                        <option value="+1">Puerto Rico (+1)</option>
+                                        <option value="+7">Rusia (+7)</option>
+                                        <option value="+46">Suecia (+46)</option>
+                                        <option value="+91">India (+91)</option>
+                                        <option value="+55">Brasil (+55)</option>
+                                        <option value="+52">México (+52)</option>
+                                        <option value="+58">Venezuela (+58)</option>
                                     </select>
                                     
                                     <label class="label_" for="numero">Numero cel:</label>
@@ -130,7 +131,8 @@
                                 </div>
                                 <div class="cont_input_label">
                                     <label class="label_" for="direccion">Dirección:</label>
-                                    <input [(ngModel)]="empleado_f.direccion" name="direccion" class="input_" type="text" id="direccion"  placeholder="Ejemplo: 123 Calle Principal" required><p class="requiered">*</p>
+                                    <input [(ngModel)]="empleado_f.direccion" name="direccion" class="input_" type="text" id="direccion"  placeholder="Ejemplo: 123 Calle Principal" required>
+                                    <p class="requiered">*</p>
                                 </div>
                                 
                                 <br><br><br>
@@ -138,8 +140,8 @@
 
                                 <div class="cont_input_label" >
                                     <label class="label_" for="diaInicio">Día de inicio:</label>
-                                    <select [(ngModel)]="empleado_f.primer_dias_laboral" name="primer_dias_laboral" class="select_" id="diaInicio" >
-                                        <option [ngValue]="''" disabled hidden>Dia inicial</option>
+                                    <select [(ngModel)]="empleado_f.primer_dias_laboral" name="primer_dias_laboral" class="select_" id="diaInicio" required>
+                                        <option value="">Dia inicial</option>
                                         <option value="Lunes">Lunes</option>
                                         <option value="Martes">Martes</option>
                                         <option value="Miercoles">Miércoles</option>
@@ -148,10 +150,10 @@
                                         <option value="Sabado">Sabado</option>
                                         <option value="Domingo">Domingo</option>
                                     </select>
-                                    
+                                
                                     <label class="label_" for="diaFinal">Día final:</label>
-                                    <select [(ngModel)]="empleado_f.ultimo_dias_laboral" name="ultimo_dias_laboral" class="select_" id="diaFinal" >
-                                        <option [ngValue]="''" disabled hidden>Dia final</option>
+                                    <select [(ngModel)]="empleado_f.ultimo_dias_laboral" name="ultimo_dias_laboral" class="select_" id="diaFinal" required>    
+                                        <option value="">Dia final</option>
                                         <option value="Lunes">Lunes</option>
                                         <option value="Martes">Martes</option>
                                         <option value="Miercoles">Miércoles</option>
@@ -160,6 +162,7 @@
                                         <option value="Sabado">Sabado</option>
                                         <option value="Domingo">Domingo</option>   
                                     </select>
+                                    <p class="requiered">*</p>
                                 </div>
                                 <div >
                                     <label  class="label_" for="horaInicio">Hora de inicio:</label>
@@ -185,7 +188,7 @@
                                 <label class="label_imagen" for="cargarImagen">Selecciona una fotografia:</label>
                             <div class="cont_input_label">    
                                 <i class="fa-solid fa-folder"></i>
-                                <input [(ngModel)]="empleado_f.imagen" name="imagen" class="input_imagen" #inputImagen type="file" id="cargarImagen" accept="image/*" (change)="mostrarImagen($event)" required>
+                                <input [(ngModel)]="empleado_f.imagen" #fileInput name="imagen" class="input_imagen" #inputImagen type="file" id="cargarImagen" accept="image/*" (change)="mostrarImagen($event)" required>
                                 <p class="requiered">*</p>
                             </div>
                             <div class="cont_input_label">
